# gtest-runner

./: BUILD.md  BuildEnv.bat  BuildEnv64.bat  CMakeLists.txt  FEATURES.md  LICENSE  README.md  _BuildEnv.bat  _BuildEnv64.bat  appveyor.yml  make.sh  release.sh
.github/workflows/: build.yaml  launchpad.yaml
debian/: changelog  control  copyright  rules
resources/: resources.qrc
resources/certificates/: certum.pfx
resources/styles/: qdarkstyle.qss
src/: GTestFailureModel.cpp  GTestFailureModel.h  GTestModelSortFilterProxy.cpp  GTestModelSortFilterProxy.h  QBottomUpSortFilterProxy.cpp  QBottomUpSortFilterProxy.h  QFilterEmptyColumnProxy.cpp  QFilterEmptyColumnProxy.h  QStdOutSyntaxHighlighter.h  QTreeModel.h  appinfo.h.in  domitem.cpp  domitem.h  executableModelDelegate.cpp  executableModelDelegate.h  executableSettingsDialog.cpp  executableSettingsDialog.h  flatDomeItem.cpp  flatDomeItem.h  gtestModel.cpp  gtestModel.h  killTestWrapper.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow_p.cpp  mainwindow_p.h  qexecutablemodel.cpp  qexecutablemodel.h  qexecutabletreeview.cpp  qexecutabletreeview.h  testsController.cpp  testsController.h  tree.h  utilities.cpp  utilities.h
src/qtfindreplacedialog/: finddialog.cpp  finddialog.h  findform.cpp  findform.h  findreplacedialog.cpp  findreplacedialog.h  findreplaceform.cpp  findreplaceform.h
